nome no AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,4 +7,4 @@
 == Calculadora Polonesa ==
 
 * Priscila de Sousa Silva - <cila_007@hotmail.com> @priscilasousa
-
+* Gabriel de Brito Sa Magalhaes - <gabrieldbsm@gmail.com> @gdbsm
